fix problems with ssl

--- a/App/Views/Expenses/new.html
+++ b/App/Views/Expenses/new.html
@@ -47,7 +47,7 @@
 		</div><br/>
 		
 		<div class="user-box">
-	  <input type="text" id="inputAmount" name="expense_comment" required="" "/>
+	  <input type="text" id="inputAmount" name="expense_comment" "/>
     <label for="Comment">Comment</label>
     </div>
 	
@@ -60,7 +60,16 @@
 	  <button>Add</button>
     </a>
 	
-	</br><h4>All row must to be filled.</h4>
+	<a href="/">
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      
+	  Return to menu
+    </a>
+	
+	
   </form>
 </div>
 	
