--- a/App/Views/Incomes/new.html
+++ b/App/Views/Incomes/new.html
@@ -38,17 +38,18 @@
 	<div class="user-box">
 	<label for="inputCategory"> Category: </label><br/><br/>
 					<select name='income_category_assigned_to_user_id' id='inputCategory' class="form-control">
-						<option  value='1'>Wynagrodzenie</option>
+						<option  value='1' selected>Wynagrodzenie</option>
 						<option value='2'  >Odsetki</option>
 						<option value='3'  >przedaż na allegro</option>
 						<option value='4'  >Inne</option>
+						
 						
 					</select>
 	
 			
    </div><br/>
 	<div class="user-box">
-	  <input type="text" id="inputAmount" name="income_comment" required="" "/>
+	  <input type="text" id="inputAmount" name="income_comment" "/>
     <label for="Comment">Comment</label>
     </div>
     <a href="">
@@ -59,7 +60,15 @@
       
 	  <button>Add</button>
     </a>
-	</br><h4>All row must to be filled.</h4>
+	<a href="/">
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      
+	  Return to menu
+    </a>
+	
 	
   </form>
 </div>
