--- a/App/Views/Signup/new.html
+++ b/App/Views/Signup/new.html
@@ -11,7 +11,7 @@
         $(document).ready(function() {
 
 				$('#inputPassword').hideShowPassword({
-				show: true,
+				show: false,
 				innerToggle: 'focus'
             });
         });
