--- a/App/Views/Login/new.html
+++ b/App/Views/Login/new.html
@@ -12,7 +12,7 @@
   <h2>Login</h2>
   <form action="/login/create" method="post">
     <div class="user-box">
-      <input type="username" name="username" required="" autofocus value="{{ username }}" >
+      <input type="username" name="username" required="" autofocus value="{{ username }}" autocomplete="off">
     <label for="inputUsername">Username</label>
     </div>
     <div class="user-box">
