--- a/App/Views/baseSettings.html
+++ b/App/Views/baseSettings.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{% block title %}{% endblock %}</title><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    <title>{% block title %}{% endblock %}</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-   <link rel="stylesheet" href="css/bootstrap.min.css" />
-   <link rel="stylesheet" href="/css/style.css"/>
    
-   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
+   
+   <link rel="stylesheet" href="css/bootstrap.min.css" />
+   <link rel="stylesheet" href="/css/Settings.css"/>
+   
    
    
 </head>
@@ -75,13 +76,6 @@
     </nav>
 </nav>
 
-{% for message in flash_messages %}
-    <div class="alert alert-{{message.type}}" role="alert">
-            {{ message.body }}
-    </div>
-    
-    {% endfor %}
-
        
 
        {% block body %}
@@ -89,22 +83,29 @@
       {% endblock %} 
 
  
+	
+	
+	  
+	  
+	  
+
+   
+
 
 	<script src="js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript">
       var nav = document.querySelector('nav');
 
       window.addEventListener('scroll', function () {
-        if (window.pageYOffset > -1) {
+        if (window.pageYOffset > 0) {
           nav.classList.add('bg-dark', 'shadow');
         } else {
           nav.classList.remove('bg-dark', 'shadow');
         }
       });
     </script>
-
-
-
+ <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+    <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>
 
     {% block footer %}
     {% endblock %}
